# writing-trainer

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  bun.lockb  codegen.ts  diesel.toml  eslint.config.mjs  flake.nix  i18next-parser.config.js  jest.config.js  knip.config.ts  lerna.json  next.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.chrome-extension.json  tsconfig.json  tslint.json  webpack.prod.js
.storybook/: config.js  main.js  preview.js  webpack.config.js
chrome-extension-storybook/: 122.db92003d5031486297e8.manager.bundle.js  231.474faf9e.iframe.bundle.js  231.474faf9e.iframe.bundle.js.map  277.48a89f329703aa3fab6e.manager.bundle.js  295.0680118382cf2b6a4239.manager.bundle.js  395.dee54ef9.iframe.bundle.js  395.dee54ef9.iframe.bundle.js.map  406.0188f392.iframe.bundle.js  406.05a6d1d2.iframe.bundle.js  406.1071422c.iframe.bundle.js  (+221 more)
src/: main.rs  (+7 more)
src/rust_packages/backend/: Cargo.toml
src/rust_packages/backend/migrations/07_songs_pronunciation/: up.sql
src/rust_packages/backend/migrations/08_users_cantodict/: up.sql
src/rust_packages/backend/migrations/09_stats/: down.sql  up.sql
src/rust_packages/backend/src/: auth.rs  cantodict.rs  dict.rs  env.rs  logs.rs  translation.rs
src/rust_packages/backend/src/db/: mod.rs  models.rs  schema.rs  stats.rs  utils.rs
src/rust_packages/backend/src/dict/: tests.rs
src/rust_packages/backend/src/gql/: mod.rs  models.rs
(+1174 files in other folders)
