[package]
name = "writing-trainer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
async-trait = "0.1.71"
rand = "0.8.5"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
actix-cors = "0.6.4"
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
rustc-hash = "1.1.0"
diesel_migrations = "2.1.0"
juniper = "0.15.11"
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
tl = "0.7.8"
urlencoding = "2.1.3"
regex = "1.10.6"
futures = "0.3.30"
writing-trainer-core = { version = "0.1.0", path = "../core" }
